@@ -103,7 +103,7 @@ syx_exec_state_save (void)
     }
 
 //! The number of primitives
-#define SYX_PRIMITIVES_MAX 96
+#define SYX_PRIMITIVES_MAX 97
 
 typedef syx_bool (* SyxPrimitiveFunc) (SyxExecState *es, SyxOop method);
 #define SYX_FUNC_PRIMITIVE(name)					\
